--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -681,6 +681,9 @@ input[type="password"] {padding: 20px;}
 /* App css overrides 
 ------------------------ */
 
+.header-nav + .mob-payment .cards-list {margin-top:-30px; margin-bottom: 50px; justify-content: left;}
+
+
 /* Homepage */
 @media (min-width: 1200px) {
 	.home .sec-banner {padding:60px 0;}
@@ -690,10 +693,10 @@ input[type="password"] {padding: 20px;}
 }
 
 
-#faq-banner.sticky {top:145px;}
+#faq-banner.sticky {top: 134px;	border-top: 5px solid #fff;	height: 55px;}
 .faq-offset {margin-top:-70px; padding-top:70px;}
 @media (min-width: 640px) {
-	#faq-banner.sticky {top:120px;}
+	#faq-banner.sticky {top:114px;}
 	#faq-banner h1 {padding:80px 0 60px}
 	#faq-banner.sticky h1 {padding:12px 0}
 }
