--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -166,7 +166,7 @@
                         left: 48%;
                         opacity: 1;
                         visibility: visible;
-                        z-index: 10;
+                        z-index: 100;
                     }
                 }
             }
@@ -542,7 +542,7 @@
 
 .sec-mission{
     overflow: hidden;
-    background: transparent url(../img/bg-mission.png) no-repeat center top;
+    background: transparent url(../img/bg-mission.jpg) no-repeat center top;
     background-size: 100%;
 
     .spacer{
