Updat header, footer, css

--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -1625,6 +1625,8 @@
                 .icon{
                     margin-left: -75px;
                     padding-right: 25px;
+                    display: block;
+                    width: 62px;
 
                     svg{
                         width: 100%;
