--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -712,6 +712,9 @@ input[type="password"] {padding: 20px;}
 	#faq-banner h1 {padding:80px 0 60px}
 	#faq-banner.sticky h1 {padding:12px 0}
 }
+@media (max-width: 1023px) {
+	.faq-offset {margin-top:-110px; padding-top:110px;}
+}
 
 
 #mega-menu-header-menu.mega-menu > li > .mega-sub-menu {padding-top: 30px !important;}
