--- a/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
@@ -86,9 +86,11 @@
 	a.logo{
 		margin: 0 auto;
 		display: block;
-		max-width: 109px;
+        max-width: 110px;
+        padding:5px 10px 0;
+        background: $color-primary;
     }
-    
+
     .m-menu{
         display: block;
         padding: 0px;
