--- a/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
@@ -86,8 +86,8 @@
 	a.logo{
 		margin: 0 auto;
 		display: block;
-        max-width: 110px;
-        padding:5px 10px 0;
+        max-width: 130px;
+        padding:0 10px 5px;
         background: $color-primary;
     }
 
