--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -1456,6 +1456,7 @@
 
 
 .sec-masthead{
+    background: url(../assets/img/bg-iv-therapy.jpg) no-repeat center center / 100%;
     padding-top: 145px;
     padding-bottom: 80px;
 
@@ -1491,7 +1492,17 @@
         }
     }
 
+    @include media(min-width, 1200px){
+        padding-top: 80px;
+    }
+    
+    @include media(max-width, 1199px) {
+        padding-top:80px;
+    }
+
     @include media(max-width, 1023px){
+        padding-top:30px;
+
         .text-wrap{
             h1{
                 font-size: 45px;
@@ -1510,8 +1521,10 @@
     padding-top: 323px;
     position: relative;
     z-index: 1;
-    background-color: $color-primary;
-    overflow: hidden;
+    // background-color: $color-primary;
+    //overflow: hidden;
+
+    padding: 18% 0 25%;
 
     .bg-slider{
         position: absolute;
@@ -1536,24 +1549,26 @@
             content: '';
             display: block;
             width: 100%;
-            height: 400px;
-            background: transparent url(../img/img-toka-fade.png) no-repeat center bottom;
+            height: 50%;
+            background: transparent url(../img/img-toka-fade2.png) no-repeat center bottom;
             background-size: 100%;
             position: absolute;
             z-index: 1;
             bottom: 3%;
             left: 0;
+            background-size: 100%;
         }
 
         .slide-item{
             outline: none;
+            img {
+                width: 100%;
+            }
         }
     }
 
     .text-wrap{
         &.text-wrap-1{
-            margin-bottom: 70%;
-
             h2{
                 font-size: 64px;
                 font-weight: 500;
@@ -1581,6 +1596,8 @@
                 font-weight: 300;
                 line-height: 1.63;
                 color: #b2b2ae;
+
+                font-size:24px;
             }
 
             b{
@@ -1590,8 +1607,117 @@
         }
     }
 
+
+    @include media(max-width, 1640px){
+
+    }
+
+    @include media(max-width, 1536px){
+        .text-wrap{
+            &.text-wrap-1{
+                h2{
+                    font-size: 55px;
+                }
+
+                h4{
+                    font-size: 20px;
+                }
+            }
+
+            &.text-wrap-2{
+                max-width: 1115px;
+
+                p{
+                    font-size: 35px;
+                }
+            }
+        }
+
+
+    }
+
+    @include media(max-width, 1199px){    
+        padding-bottom: 15%;
+
+        .text-wrap { 
+            &.text-wrap-1 {
+                
+
+                p {
+                    font-size: 18px;
+                }
+            }
+            &.text-wrap-2 {
+                p {
+                    font-size:20px;
+                }
+            }
+        }
+
+    }
+
+    @include media(max-width, 1023px){
+        .text-wrap{
+            &.text-wrap-1{
+            
+                h2{
+                    font-size: 55px;
+                }
+
+                h4{
+                    font-size: 20px;
+                }
+            }
+
+            &.text-wrap-2{
+                p{
+                    font-size: 27px;
+                }
+            }
+        }
+
+    }
+
+    @media (min-width:768px) and (max-width: 1023px) {
+        .text-wrap {
+            &.text-wrap-1 {
+                h2, h4, p, .arrow-button {
+                    color:$color-primary;
+                } 
+            }
+        }
+    }
+
+    @include media(max-width, 767px){
+        padding:50% 0 0;
+        
+	    .bg-slider {
+            &:after {
+                opacity:0.5;
+            }
+        }
+	    .text-wrap {
+            &.text-wrap-1 {
+                max-width: none;
+            }
+        }
+
+    }
+}
+
+
+
+
+
+.sec-ivmenu{
+    position: relative;
+    z-index: 1;
+    // background-color: $color-primary;
+    overflow: hidden;
+
     .ivmenu-options{
-        margin-top: 75px;
+        margin-top: -115px;
+        padding-top: 160px;
 
         .title{
             font-size: 64px;
@@ -1602,6 +1728,9 @@
 
         .ivmenu-item{
             margin-bottom: 150px;
+
+            margin-top:-115px; 
+            padding-top:115px;
 
             .heading{
                 display: flex;
@@ -1639,7 +1768,7 @@
                     font-weight: bold;
                     color: #c03015;
                     text-transform: uppercase;
-                    background: $color-primary;
+                    background: $color-white;
                     display: inline-block;
                     margin-bottom: -5px;
                     padding: 0 10px;
@@ -1648,6 +1777,10 @@
                         width: 90px;
                     }
                 }
+            }
+
+            .min-hcontent {
+                min-height: 180px;
             }
 
             .metas{
@@ -1668,8 +1801,19 @@
                     font-family: 'Oswald', sans-serif;
                     font-size: 18px;
                     font-weight: normal;
-                    color: #ffffff;
-
+                    color: #555555;
+                    > span {
+                        display: inline-block;
+                        margin-right: 10px;
+                        strong {
+                            display: block;
+                            font-weight: 400;
+                            font-size: 80%;
+                        }
+                        sup {
+                            font-size: 60%;
+                        }
+                    }
                     u{
                         text-decoration: line-through;
                         display: inline-block;
@@ -1699,7 +1843,7 @@
                     font-size: 20px;
                     font-weight: 300;
                     line-height: 2.25;
-                    color: #b2b2ae;
+                    color: $color-grey;
                 }
             }
 
@@ -1721,6 +1865,22 @@
         }
     }
 
+    #g20 {
+        position: absolute;
+        top: 0;
+        width: 35px;
+        height: 16px;
+        animation: wave1 .7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+        transform: translate3d(56px, 106px, 0px);
+    }
+    #g24 {
+        position: absolute;
+        top: 0;
+        width: 35px;
+        height: 16px;
+        animation: wave2 .7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+        transform: translate3d(21px, 105px, 0px);
+    }
 
     @include media(max-width, 1640px){
         .ivmenu-options{
@@ -1733,25 +1893,6 @@
     }
 
     @include media(max-width, 1536px){
-        .text-wrap{
-            &.text-wrap-1{
-                h2{
-                    font-size: 55px;
-                }
-
-                h4{
-                    font-size: 20px;
-                }
-            }
-
-            &.text-wrap-2{
-                max-width: 1115px;
-
-                p{
-                    font-size: 35px;
-                }
-            }
-        }
 
         .ivmenu-options{
             .title{
@@ -1761,30 +1902,32 @@
         }
     }
 
-    @include media(max-width, 1023px){
-        .text-wrap{
-            &.text-wrap-1{
-                margin-bottom: 55px;
+    @include media(max-width, 1199px){
+ 
+        .bg-slider {
+            &:after {
+                top:30%;
+            }
+        }
+        .text-wrap {
+            &.text-wrap-1 {
+                max-width: 400px;
+                padding-bottom: 30%;
 
-                h2, h4, p{
-                    color: #fff;
-                }
-
-                h2{
-                    font-size: 55px;
-                }
-
-                h4{
-                    font-size: 20px;
+                p {
+                    font-size: 18px;  
                 }
             }
-
-            &.text-wrap-2{
-                p{
-                    font-size: 27px;
+            &.text-wrap-2 {
+                p {
+                    font-size:20px;
                 }
             }
         }
+
+    }
+
+    @include media(max-width, 1023px){
 
         .ivmenu-options{
             .title{
@@ -1856,6 +1999,9 @@
                     li{
                         font-size: 18px;
                     }
+                    .price-tag > span strong {
+                        font-size: 65%;
+                    }
                 }
 
                 .content{
@@ -1867,5 +2013,45 @@
             }
         }
     }
+    
+    @include media(max-width, 480px){
+        
+    }
 }
 
+
+
+.sec-ivfoot {
+    background: $color-grey;
+    padding: 100px 0;
+    color: darken($color-white, 0.5);
+
+    p {
+        font-size: 40px;
+        color: inherit;
+
+        span {
+            color: $color-white;
+        }
+        strong {
+            font-weight: 500;
+        }
+    }
+
+    
+    @include media(max-width, 1199px){
+        padding: 70px 0;
+
+        p {
+            font-size: 30px;
+        }
+    }
+    
+    @include media(max-width, 639px){
+        padding: 40px 0;
+        
+        p {
+            font-size: 20px;
+        }
+    }
+}
