--- a/wp-content/themes/mybizniche/resources/css/scss/faq.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/faq.scss
@@ -12,19 +12,24 @@ section {
             }
             @include media(max-width, 639px) {
                 text-align: center;
-                font-size:24px;
+                font-size:24px; 
                 padding: 60px 20px 60px;
             }
+            @include media(min-width, 640px) {
+                padding:80px 0 60px
+            }
+
         }
 
         &.sticky {
             position: fixed;
             background: $color-primary;
             width: 100%;
-            height: 50px;
+            height: 55px;
             padding: 0px;
-            top: 109px;
+            top: 108px;
             z-index: 99;
+            border-top: 5px solid #fff;	
             animation: 0.5s ease subHeaderIn forwards;
 
             h1 {
@@ -34,8 +39,11 @@ section {
                 @include media(max-width, 639px) {
                     font-size:18px;
                 }
+                @include media(min-width, 640px) {
+                    padding:12px 0;
+                }
             }
-
+            
         }
     }
 
@@ -75,6 +83,18 @@ section {
                 min-height: 116px;
                 @include media(max-width, 1023px){
                     font-size:14px;
+                }
+            }
+
+            .faq-offset {
+                margin-top:-100px; 
+                padding-top:100px;
+
+                @include media(max-width, 1023px){
+                    .faq-offset {
+                        margin-top:-110px; 
+                        padding-top:110px;
+                    }
                 }
             }
     
